<resources>
    <string name="app_name">Cloud Smart Home</string>

    <string name="appName">App name</string>
    <string name="loginText">Login</string>
    <string name="passwordText">Password</string>
    <string name="signIn">Sign in</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="sound">Sound</string>
    <string name="gas">Gas</string>
    <string name="controlParameters">Control parameters</string>
    <string name="systemProperties">System properties</string>
    <string name="logIn">Log in...</string>
    <string name="pleaseWait">Please wait</string>
    <string name="generalError">An error occurred. Try again later.</string>
    <string name="loginError">Wrong app name, login, password or app is not available. Try again later.</string>
    <string name="dataFormatError">Insert correct data.</string>

    <string name="temperatureTitle">Temperature</string>
    <string name="getData">Get</string>
    <string name="minTemperature">Min. temperature</string>
    <string name="maxTemperature">Max. temperature</string>
    <string name="heating">Heating</string>
    <string name="airCondition">Air condition</string>
    <string name="setOptimalTemperature">Set optimal temperature</string>
    <string name="optimalTemperatureIsActive">Active</string>
    <string name="postSettings">Post</string>
    <string name="enabledState">enabled</string>
    <string name="disabledState">disabled</string>

    <string name="humidityTitle">Humidity</string>
    <string name="minHumidity">Min. humidity</string>
    <string name="humidifier">Humidifier</string>
    <string name="setOptimalHumidity">Set optimal humidity</string>

    <string name="lightTitle">Light intensity</string>
    <string name="minLight">Min. light intensity</string>
    <string name="lighting">Lighting</string>
    <string name="setOptimalLight">Set optimal light intensity</string>

    <string name="gasTitle">Gas density</string>
    <string name="maxGas">Max. gas density</string>
    <string name="alarm">Alarm</string>
    <string name="setOptimalGas">Set optimal gas density</string>
</resources>
